@@ -1,7 +1,5 @@
 * more or less urgently necessary
 
-- save and load ObjectDrawer styles !
-
 - document mathematical i18n strings, so that the translators have a
    clue about how to translate them !
 
